# edubadges-server

./: .coveragerc  .gitignore  .gitmodules  .pdm-python  .travis.yml  API_DESCRIPTION.md  API_DESCRIPTION_v1.md  API_DESCRIPTION_v2.md  CHANGELOG.md  CHANGELOG_edubadges.md  CODE-OF-CONDUCT.md  Dockerfile  Gruntfile.js  LICENSE  LTI_Canvas.md  MANIFEST.in  README  README.md  S3_STORAGE_SETUP.md  SPECFILE  UV_MIGRATION.md  accounts.css  api_docs_v1.json  cli.py  dev.Dockerfile  docker-compose.yml  docker-entrypoint.sh  env_vars.sh.example  example-build-script.sh  first_build.sh  gulpfile.js  jest-config.js  kafka_logging_example.py  manage.py  manage.spec  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  (+7 more)
.github/: ISSUE_TEMPLATE.md
.github/workflows/: audit.yml  bandit.yml  codeql-analysis.yml  docker-image-tag.yml  docker-image.yml  pysa.yml  radon.yml  ruff.yml  tests.yml  trivy.yml  trufflehog.yml
apps/backpack/: admin.py  api.py  api_v1.py  models.py  permissions.py  serializers_v1.py  serializers_v2.py  share_urls.py  sharing.py  tests.py  v1_api_urls.py  v2_api_urls.py  views.py
apps/badge_connect/: api.py  api_urls.py
apps/badgeanalysis/: api.py  badge_objects.py  cur_context.py  forms.py  functional_validators.py  models.py  png.py  pngutils.py  scheme_models.py  serializers.py  svg.py  testresources.py  tests.py  urls.py  utils.py  validation_messages.py  views.py
apps/badgeuser/: __init__.py  account_forms.py  admin.py  api.py  api_urls.py  api_v1.py  apps.py  authcode.py  backends.py  forms.py  managers.py  middleware.py  models.py  permissions.py  schema.py  serializers.py  serializers_v1.py  serializers_v2.py  signals.py  tasks.py  tests.py  urls.py  utils.py  v1_api_urls.py  v2_api_urls.py  views.py
apps/badgrlog/: __init__.py  badgrlogger.py  urls.py  views.py
apps/badgrsocialauth/: adapter.py  admin.py  api.py  permissions.py  redirect_urls.py  serializers.py  urls.py  utils.py  v1_api_urls.py  views.py
apps/bakery/: __init__.py  png_bakery.py  tests.py  utils.py
apps/basic_models/: actions.py  managers.py  models.py  version.py
apps/cachemodel/: __init__.py  decorators.py  managers.py  models.py  tests.py  utils.py
apps/certificates/: admin.py  forms.py  models.py  urls.py  views.py
apps/component_store/: models.py
apps/composer/: __init__.py  admin.py  api.py  api_urls.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/composition/: __init__.py  admin.py  api.py  api_urls.py  format.py  models.py  serializers.py  share_urls.py  sharing.py  tasks.py  tests.py  urls.py  utils.py  views.py
apps/consumer/: api.py  api_urls.py  models.py  serializers.py  urls.py  views.py
apps/contact/: admin.py  models.py  urls.py  views.py
apps/credential_store/: __init__.py  admin.py  format.py  models.py  utils.py
apps/directaward/: admin.py  api.py  api_urls.py  models.py  permissions.py  (+4 more)
badgr-server/: Dockerfile
docker/: dev.Dockerfile  entrypoint-dev.sh  entrypoint-k8s.sh  entrypoint.sh  k8s.Dockerfile  minio-init.sh
docs/: AUDITLOG_API.md  S3_STORAGE_SETUP.md  apps.backpack.tests.rst  apps.badgeuser.migrations.rst  apps.badgeuser.rst  apps.badgeuser.tests.rst  apps.badgrlog.events.rst  apps.badgrsocialauth.providers.eduid.migrations.rst  apps.badgrsocialauth.providers.rst  apps.badgrsocialauth.providers.surf_conext.rst  apps.badgrsocialauth.rst  apps.badgrsocialauth.tests.rst  apps.basic_models.admin.rst  apps.cachemodel.rst  apps.composition.migrations.rst  apps.directaward.migrations.rst  apps.directaward.tests.rst  apps.entity.db.rst  apps.health.rst  apps.insights.rst  apps.institution.migrations.rst  apps.institution.testfiles.rst  apps.institution.tests.rst  apps.issuer.management.commands.rst  apps.issuer.rst  apps.lti13.migrations.rst  apps.lti13.rst  apps.lti_edu.migrations.rst  apps.lti_edu.rst  apps.mainsite.management.rst  apps.mainsite.seeds.rst  apps.mainsite.templatetags.rst  apps.mainsite.tests.rst  apps.notifications.migrations.rst  apps.notifications.rst  apps.ob3.rst  apps.public.rst  apps.rst  apps.staff.rst  apps.staff.tests.rst  (+9 more)
fixtures/: testserver.json
http/: DeleteDestroy.http  GetRetrieve.http  PostCreate.http  PutUpdate.http  collection.json  schema.json
mysql/: Dockerfile
queries/: badge_instances.sql  catalog.sql  count_assertions.sql  criteria_url.sql  extensions.sql  micro_credentials.sql  notifications.sql  notifications2.sql  various.sql
scripts/: delete-da.sh  reminders_da.sh  update-deps.sh  uv-sync.sh
(+1816 files in other folders)
