[project]
name = "Edubadges server"
version = "2.14.1"
description = "Digital badge management for issuers, earners, and consumers"
authors = [
    {name = "Okke", email = "daniel.ostkamp@surf.nl"},
    {name = "Daniel", email = "daniel.ostkamp@surf.nl"},
    {name = "Concentric Sky", email = "badgr@concentricsky.com"},
]
dependencies = [
    "Django==3.2.25",
    "semver==2.6.0",
    "pytz==2022.2.1",
    "Pillow==10.3.0",
    "python-dateutil==2.8.1",
    "pandas==1.1.5",
    "mysqlclient==2.2.4",
    "django-storages==1.7",
    "python-resize-image==1.1.19",
    "drf-spectacular==0.26.1",
    "drf-spectacular-sidecar==2023.4.1",
    "django-object-actions==2.0.0",
    "python-memcached==1.59",
    "djangorestframework==3.14.0",
    "django-allauth==0.51.0",
    "oauthlib==3.2.2",
    "requests==2.31.0",
    "requests-oauthlib==1.3.1",
    "rules==0.4",
    "django-oauth-toolkit==2.2.0",
    "django-cors-headers==3.14.0",
    "django-cors-middleware==1.5.0",
    "django-autoslug==1.9.8",
    "sqlparse==0.4.4",
    "netaddr",
    "django-extensions==2.0.7",
    "jsonschema==2.6.0",
    "simplejson==3.6.4",
    "PyLD==0.7.1",
    "rfc3987==1.3.4",
    "jsonfield==3.1.0",
    "Markdown==2.6.8",
    "django-markdownify==0.1.0",
    "bleach==3.3.0",
    "openbadges @ git+https://github.com/oharsta/openbadges-validator-core@develop",
    "celery==5.2.7",
    "django-celery-results==2.4.0",
    "importlib-metadata==4.13.0",
    "python-json-logger==0.1.2",
    "cffi==1.14.5",
    "cryptography==42.0.4",
    "enum34==1.1.6",
    "idna==2.5",
    "ipaddress==1.0.16",
    "pyasn1==0.1.9",
    "pycparser==2.14",
    "six==1.13.0",
    "cairocffi==0.9.0",
    "CairoSVG==2.7.0",
    "cssselect==0.9.2",
    "tinycss==0.4",
    "backports-csv==1.0.4",
    "more-itertools==2.5.0",
    "responses==0.8.1",
    "django-mock-queries==2.1.5",
    "PyLTI1p3 @ git+https://github.com/edubadges/pylti1.3@master",
    "social-auth-app-django==3.1.0",
    "urllib3==1.26.18",
    "graphene-django==2.15.0",
    "aniso8601==7.0.0",
    "premailer==3.7.0",
    "django-otp==1.1.1",
    "pycryptodome==3.19.1",
    "django-api-proxy==0.1.1",
    "qrcode==7.4.2",
    "django-pdb==0.6.2",
    "backports.csv==1.0.4",
    "django_mock_queries==2.1.5",
    "drf_spectacular_sidecar==2023.4.1",
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "GNU Affero General Public License v3"}
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 1.10",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Topic :: Education",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]


[project.urls]
Homepage = "https://edubadges.nl"

[tool.pdm]
distribution = true
package-dir = "apps"

[tool.poetry]
package-mode = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

